--- a/rebar.config
+++ b/rebar.config
@@ -103,8 +103,10 @@
   {amqp_client, "3.12.6"},
   {eredis, "1.7.0"},
   {erlcloud, "3.6.5"},
+  {erlkaf, ".*", {git, "https://github.com/silviucpp/erlkaf.git", "master"}},
 
-  %%% Internal monitoring and debugging tools
+
+   %%% Internal monitoring and debugging tools
   {recon, "2.5.3"},
   {observer_cli, "1.7.4"},
 
